--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,7 +3,15 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
 
+/* General styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
 }
 
 
@@ -15,8 +23,12 @@ header {
 /* Main */
 main {
     background-color: lightblue;
+    /* Make main element take up surplus space to push footer to the bottom */
+    flex: 1 0 auto;
 }
+
 /* Footer */
 footer {
-    background-color: orange;
+    background-color: blue;
 }
+
