--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -16,6 +16,7 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
 }
 
 
@@ -36,7 +37,4 @@ footer {
     background-color: orange;
 }
 
-h1 {
-    font-family: 'Oswald', sans-serif;
-  
-}
+
