--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -42,7 +42,21 @@ h1 {
     color: #252525;
 }
 
-/* Main */
+#menu {
+    font-size: 110%;
+    list-style-type: none;
+    letter-spacing: 4px;
+}
+
+#menu > li {
+    margin-bottom: 1em;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+/* Main content*/
 main {
     background-color: lightblue;
     /* Make main element take up surplus space to push footer to the bottom */
