--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -107,15 +107,30 @@ footer {
         width: fit-content;
         padding-right: 1rem;
     }
+    
     #menu {
         display: flex;
     }
+
     #menu > li {
         padding-left: 1rem;
     }
+
     .nav-toggle-label {
         display: none;
     }
+
+#logo {
+    font-size: 200%;
+    line-height: 75px;
+    margin: 0 0.5rem;
+}
+
+/* Main content */
+main {
+    /* Push main content down to accomodate larger header */
+    margin-top: 79px;
+
 }
 
 
