--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -107,7 +107,7 @@ footer {
         width: fit-content;
         padding-right: 1rem;
     }
-    
+
     #menu {
         display: flex;
     }
@@ -130,7 +130,14 @@ footer {
 main {
     /* Push main content down to accomodate larger header */
     margin-top: 79px;
-
+    }
 }
 
 
+/* Large devices: laptops and larger (992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
+
+}
