--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,5 +1,6 @@
-/* Google fonts import */
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+/* Google fonts import*/
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
+
 
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
@@ -18,13 +19,14 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+
 /* Header */
 header {
     background-color: #ffffff;
-    padding: 0 1rem;
+    padding:0 1rem;
     position: fixed;
     z-index: 99;
-    width: 100%;
+    width:100%;
     box-shadow: 0 2px 2px #3a3a3a;
     display: flex;
     justify-content: space-between;
@@ -37,16 +39,16 @@ header a {
 }
 
 h1 {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'oswald', sans-serif;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 2px;   
     color: #252525;
 }
 
 #menu {
     font-size: 110%;
-    letter-spacing: 4px;
     list-style-type: none;
+    letter-spacing: 4px;
 }
 
 #menu > li {
@@ -57,42 +59,41 @@ h1 {
     border-bottom: 1px solid #3a3a3a;
 }
 
-/* Navbar styles with dropdown toggle */
-nav {
-    position: absolute;
-    background-color: #ffffff;
-    width: 100%;
-    left: 0;
-    padding: 0 1rem;
-    box-shadow: 0 2px 2px #3a3a3a;
-    display: none;
-    top: 100%;
-}
+/* Navbar styles with dropdown menu */
+    nav {
+        position: absolute;
+        background-color: #ffffff;
+        width: 100%;
+        left: 0;
+        padding: 0 1rem;
+        box-shadow: 0 2px 2px #3a3a3a;
+        display: none;
+        top: 100%;
+    }
 
-/* Nav toggle */
-#nav-toggle:checked~nav {
-    display: block;
-}
+    /* Nav toggle */
+    #nav-toggle:checked~nav {
+        display: block;
+    }
 
-#nav-toggle {
-    display: none;
-}
-
+    #nav-toggle {
+        display: none;
+    }
 .nav-toggle-label {
     font-size: 2rem;
-}
 
+}
 /* Main content */
 main {
     background-color: lightblue;
-    /* Make main element take up any surplus space to push footer down */
+    /* Make main element take up surplus space to push footer to the bottom */
     flex: 1 0 auto;
     margin-top: 47px;
 }
 
 /* Footer */
 #social-networks {
-    text-align: center;
+    text-align:center;
     padding: 20px 0;
     display: flex;
     justify-content: space-evenly;
@@ -109,8 +110,8 @@ main {
 @media screen and (min-width: 768px) {
     /* Header */
     nav {
-        display: block;
-        position: relative;
+        display:block;
+        position:relative;
         box-shadow: none;
         width: fit-content;
         padding-right: 1rem;
@@ -128,22 +129,24 @@ main {
         display: none;
     }
 
-    #logo {
-        font-size: 280%;
-        line-height: 75px;
-        margin: 0 0.5rem;
-    }
+#logo {
+    font-size: 280%;
+    line-height: 75px;
+    margin: 0 0.5rem;
+}
 
-    /* Main content */
-    main {
-        /* Push main content down to accommodate larger header */
-        margin-top: 79px;
+/* Main content */
+main {
+    /* Push main content down to accomodate larger header */
+    margin-top: 79px;
     }
 }
 
-/* Large devices (laptops and desktops, 992px and up) */
+
+/* Large devices: laptops and larger (992px and up) */
 @media screen and (min-width: 992px) {
-    #menu a:hover{
+    #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+
 }
