--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,36 @@ main {
 #cover-text > h2, #cover-text > h3 {
     color: #ffffff;
 }
+/* Reasons to run section */
+
+#reasons {
+    margin: 20px auto;
+    width: 90%;
+}
+
+#reasons > h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 280%;
+}
+
+#benefits-physical > div, #benefits-mental > div {
+    margin-bottom: 20px;
+    line-height: 20px;
+
+}
+
+
+#benefits p {
+    padding: 0 20px;
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5x 0;
+}
+
+
 
 /* Footer */
 #social-networks {
@@ -168,7 +198,6 @@ main {
 #cover-text {
     width: 300px;
     right: 100px;
-
     
 }
 
