--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,9 +214,23 @@ main {
     right: 100px;
     
 }
-
+/* Reasons Section */
+#benefits-physical, #benefits-mental {
+    display: flex;
+    flex-direction: column;
+    width: 100%; 
 }
 
+#benefits-physical > div,
+#benefits-mental > div {
+    width:75%;
+}
+
+#benefits-mental > div {
+    text-align: end;
+    align-self: flex-end;
+}
+}
 
 
 /* Large devices: laptops and larger (992px and up) */
@@ -226,3 +240,29 @@ main {
     }
 
 }
+
+/* Large devices: laptops and larger (1200px and up) */
+@media screen and (min-width: 1200px) {
+    #benefits {
+        display: flex;
+        flex-direction: row;
+    }
+    #benefits > div {
+        flex: 1;
+    } 
+
+    #benefits-image {
+        order: 0
+        
+    }
+    #benefits-mental {
+        order: 1;
+    }
+
+    #benefits-mental > div {
+        align-self: flex-start;
+    }
+
+    #benefits-physical > div {
+        align-self: flex-end
+    }
