--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,34 @@ hr {
     justify-content: center;
 }
 
+/* Meetups times section */
+
+#times {
+    background: url('../images/dublin-city.webp') no-repeat center / cover;
+    /* Handles responsitivity without the need for media queries */
+    display: flex;
+    flex-wrap: wrap;
+   
+}
+
+#times div {
+    color: #fafafa;
+    background-color:rgba(0, 0, 0, 0.6);
+    Padding: 15px;
+    text-align: center;
+    /* This will not wrap on screens of less than 400px wide.
+    Each div will expand to fill the available space on its row */
+    flex-basis: 200px;
+    flex-grow:1;
+    /* Creates a grid of meetup times over the background image */
+    border: 2px solid white
+}
+
+#times h3 {
+    /* Overrides the heading color set in the general styles */
+    color: #fafafa;
+}
+
 /* Footer */
 #social-networks {
     text-align:center;
@@ -266,3 +294,4 @@ main {
     #benefits-physical > div {
         align-self: flex-end;
     }
+}
