Increase gallery columns on larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,13 @@ hr {
     color: #3a3a3a;
 }
 
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
@@ -272,6 +279,11 @@ main {
     text-align: end;
     align-self: flex-end;
 }
+
+/* Gallery */
+#photos {
+    column-count: 3;
+    }
 }
 
 
@@ -279,8 +291,13 @@ main {
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+        
     }
 
+    /* Gallery */
+    #photos {
+        column-count: 4;
+    }
 }
 
 /* Large devices: laptops and larger (1200px and up) */
