--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,11 @@ header a {
 main {
     /* Make main element take up surplus space to push footer to the bottom */
     flex: 1 0 auto;
+    /* Add margin at the top to prevent from be covered by fixed header */
     margin-top: 47px;
+    /*Enable flex properties for child elements */
+    display: flex;
+    flex-direction: column;
 }
 
 /* Hero section */
@@ -200,13 +204,52 @@ hr {
     line-height: 0;
 }
 
-/* Sign Up Page */
+/* Form */
 #signup {
-    background: url("../images/signup-image.webp") no-repeat center center/cover;
+    background-image: url("../images/signup-image.webp");
+    background-size: cover;
     background-position: 75%;
-    flex-grow: 1
-    padding:20px 10px;
+    flex-grow: 1;
+    padding:20px 10% 0 10%;
 }
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
+
+#signup-form > h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
+}
+
 
 /* Footer */
 #social-networks {
@@ -293,8 +336,30 @@ main {
 #photos {
     column-count: 3;
     }
+
+
+/* Form */
+#signup {
+    background-position: center;
+    position: relative;
 }
 
+#signup-form {
+    max-width: 400px;
+    position: absolute;
+    left: 10%;
+    top: 150px;
+}
+
+.text-input:hover {
+    border-color: #f16c6b;
+}
+
+.join-button:hover {
+    background-color: #fafafa;
+    color: #454b1b
+}
+}
 
 /* Large devices: laptops and larger (992px and up) */
 @media screen and (min-width: 992px) {
